--- a/W08/Index.html
+++ b/W08/Index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Working with a remote API</title>
-    <script src="index.js"></script>
 </head>
 <body>
     <h1>Swapi</h1>
-    <button type="button" id="people">Get People!</button>
-    <div class="peopleContainer">
-
+    <button id="people">Get People!</button>
+    <div id="peopleContainer">
+        
     </div>
+    <button id="next">Next</button>
+    <script src="index.js"></script>
 </body>
 </html>
