--- a/W08/Index.html
+++ b/W08/Index.html
@@ -12,6 +12,7 @@
     <div id="peopleContainer">
         
     </div>
+    <button id="prev">Prev</button>
     <button id="next">Next</button>
     <script src="index.js"></script>
 </body>
